--- a/src/containers/pages/Dashboard/dashboard.scss
+++ b/src/containers/pages/Dashboard/dashboard.scss
@@ -77,6 +77,7 @@
     border: 1px solid #ddd;
     padding: 1em;
     flex: 1;
+    position: relative;
     width: 80%;
     box-shadow: 4px 3px 9px rgba($color: #000000, $alpha: 0.5);
     border-radius: 0.5em;
@@ -97,6 +98,20 @@
     }
     .content {
       font-size: 1.1rem;
+    }
+    .close {
+      position: absolute;
+      top: 20px;
+      right: 30px;
+      transition: all 200ms;
+      font-size: 3em;
+      font-weight: bold;
+      text-decoration: none;
+      color: #333;
+      &:hover {
+        color: lightcoral;
+        cursor: pointer;
+      }
     }
   }
 }
